# test-rag-model-srs

./: .gitignore  README.md  benchmark_ab.py  benchmark_retrieval.py  env.example  generate_testset.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
notebooks/: 01_prompt.ipynb  srs_evaluation_report.csv  srs_prompt_evaluation_report.csv
src/app/: main.py  models.py
src/app/services/: evaluator.py  rag_indexer.py  rag_retriever.py  srs_generator.py
src/app/utils/: logger.py
test/: test_api.py  test_e2e_rag.py  test_rag_index.py  test_retrieval.py
